ui/shared/styles.css
html,
body {
  height: 100%;
  width: 100%;
  display: flex;
  flex-direction: column;
  font-family: "Roboto", sans-serif;
  letter-spacing: 0.0625em;
}

body.vscode-dark {
  background-color: #1b1b1b;
  color: #bdbdbd;
}

body.vscode-light {
  background-color: #fff;
  color: #1b1b1b;
}

.vscode-light .logo {
  -webkit-filter: invert(1);
  filter: invert(1);
}

.content-row {
  flex-grow: 1;
  overflow-y: hidden;
  padding-bottom: 1rem;
}

.footer > .col {
  padding: 0;
}

.footer {
  margin: 0;
}

.scrollable {
  overflow-y: auto;
}

.content {
  background-color: burlywood;
  overflow: scroll;
}

:root {
  --btn: #0e629c;
  --btn-hover: #15496e;
  --btn-click: #0e3450;
  --link: dodgerblue;
  --link-hover: rgb(15, 109, 204);
}

.dock-bottom-left {
  position: fixed;
  bottom: 4rem;
  left: 4rem;
}

#current-version {
  color: #bdbdbd;
}

.logo {
  vertical-align: -4px;
}

.change {
  line-height: 150%;
}

.badge-success {
  color: #fff;
  background-color: #73c991;
}

.badge-danger {
  color: #fff;
  background-color: #ce4f59;
}

.badge {
  vertical-align: 2px;
  line-height: 120%;
  width: 6rem;
}

body {
  position: relative;
  min-height: 35rem;
  background-position: center;
  background-repeat: no-repeat;
  background-attachment: scroll;
  background-size: cover;
  margin-top: 40px;
  margin-bottom: 40px;
}

body h1 {
  font-size: 3.5rem;
  line-height: 2.5rem;
  font-weight: bold;
  color: #5c5c5c !important;
  font-family: "Open Sans";
}

body h2 {
  /* max-width: 20rem; */
  font-size: 1rem;
}

body h3 {
  /* max-width: 20rem; */
  font-size: 1.5rem;
}

.btn {
  -webkit-box-shadow: 0 0.1875rem 0.1875rem 0 rgba(0, 0, 0, 0.1) !important;
  box-shadow: 0 0.1875rem 0.1875rem 0 rgba(0, 0, 0, 0.1) !important;
  padding: 1rem;
  font-size: 80%;
  text-transform: uppercase;
  letter-spacing: 0.15rem;
  border: 0;
  width: 100%;
  height: 100%;
  display: flex;
  justify-content: center; /* align horizontal */
  align-items: center; /* align vertical */
}

.btn-primary {
  background-color: var(--btn);
}

.btn-primary:hover {
  background-color: var(--btn-hover);
}

.btn-primary:focus {
  background-color: var(--btn-hover);
  color: #fff;
}

.btn-primary:active {
  background-color: var(--btn-click) !important;
}

.text,
.textarea {
  -webkit-box-shadow: 0 0.1875rem 0.1875rem 0 rgba(0, 0, 0, 0.1) !important;
  box-shadow: 0 0.1875rem 0.1875rem 0 rgba(0, 0, 0, 0.1) !important;
  padding: 1.25rem 2rem;
  height: auto;
  border: 0;
}

a {
  color: var(--link);
}

a:focus,
a:hover {
  text-decoration: none;
  color: var(--link-hover);
}

